--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -21,3 +21,4 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  gmap_key: <%= ENV["GMAP_KEY"] %>
